# discrete_event_simulator

./: Cargo.toml  README.md
benches/: evolution_performance.rs  sim_performance.rs
src/: lib.rs  main.rs  sim.rs
src/des/: des.rs  scheduler.rs
src/environment/: bus_world.rs  env.rs  environment.rs
src/environment/bus_world/: bus.rs  bus_environment.rs  bus_scenario_traits.rs  bus_stop.rs  passenger.rs  utils.rs
src/environment/bus_world/bus_world_events/: import_bus.rs  load_passengers.rs  move_bus_to_stop.rs  new_bus.rs  terminal_event.rs  unload_passengers.rs
src/event/: bus_event.rs  event.rs  import_bus.rs  new_bus.rs  schedulable.rs
src/genetic_learning/: charting.rs  evolution.rs  feature_thoughts.md  implementation_ideas.md
src/genetic_learning/bus_routing/: evolution.rs
src/simulation/: sim.rs
src/statistics/: data_point.rs  stats.rs  timeseries.rs
test_data/: timeseries_multiple_data_expected_display.txt  timeseries_simple_expected_display.txt
