[package]
name = "discrete_event_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
fake = "2.8.0"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
serde_with = "3.4.0"
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "sim_performance"
harness = false
